--- a/ansible/roles/xroad-ca/tasks/main.yml
+++ b/ansible/roles/xroad-ca/tasks/main.yml
@@ -4,6 +4,20 @@
     msg: "This playbook only supports Ubuntu"
   when: ansible_os_family != "Debian"
 
+- name: Update repositories cache
+  apt:
+    update_cache: yes
+
+- name: Check for Python
+  raw: test -e /usr/bin/python
+  changed_when: false
+  failed_when: false
+  register: check_python
+
+- name: Install Python
+  raw: test -e /usr/bin/apt && (apt -y update && apt install -y python-minimal) || (yum -y install python libselinux-python)
+  when: check_python.rc != 0
+
 - name: install required packages
   package:
       name: "{{ item }}"
