[Ansible] Support to X-Via Central Server script

--- a/ansible/roles/xroad-base/tasks/ubuntu.yml
+++ b/ansible/roles/xroad-base/tasks/ubuntu.yml
@@ -28,7 +28,7 @@
   apt_repository:
     repo: "{{ubuntu_18_apt_repo}}"
     state: present
-  when: ansible_distribution_release == "bionic"
+  when: package_source != "xvia" and ansible_distribution_release == "bionic"
 
 - name: enable UTF-8 locales
   locale_gen:
