--- a/ansible/roles/xroad-ss/tasks/ubuntu.yml
+++ b/ansible/roles/xroad-ss/tasks/ubuntu.yml
@@ -29,8 +29,8 @@
     mode: 0600
   when: database_admin_password != ""
 
-- name: install xroad security server packages
-  apt:
-    name: "{{ vars['xroad_varpkg_' + variant] }}"
-    state: latest
-    force: yes
+#- name: install xroad security server packages
+#  apt:
+#    name: "{{ vars['xroad_varpkg_' + variant] }}"
+#    state: latest
+#    force: yes
