--- a/ansible/ss_cluster/xroad_ss_cluster.yml
+++ b/ansible/ss_cluster/xroad_ss_cluster.yml
@@ -3,9 +3,9 @@
   tasks:
       - name: Require ansible version >=2.1
         assert:
-          that: 
+          that:
             - "{{ ansible_version is defined }}"
-            - "{{ ansible_version.full | version_compare(2.1,'>=') }}"
+            - "{{ ansible_version.full is version(2.1,'>=') }}"
 
 - hosts: slaves
   become: yes
